--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="calcstyle.css">
 </head>
 <body>
   <div class="calculator">
@@ -31,6 +31,6 @@
       <button class="equal" onclick="calculate()">=</button>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="calc.js"></script>
 </body>
 </html> 
