addind root functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="display" id="display">0</div>
     <div class="buttons">
       <button class="clear" onclick="clearDisplay()">C</button>
+      <button class="operator root" onclick="appendToDisplay('√(')">√</button>
       <button onclick="appendToDisplay('(')">(</button>
       <button onclick="appendToDisplay(')')">)</button>
       <button class="operator" onclick="appendToDisplay('/')">÷</button>
