--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <div class="calculator">
+    <div class="power-row">
+      <button id="power-btn" onclick="togglePower()">On/Off</button>
+      <div id="smile-message" class="smile-message">😊 Hello</div>
+    </div>
     <div class="display" id="display">0</div>
     <div class="buttons">
       <button class="clear" onclick="clearDisplay()">C</button>
