--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="calculator">
     <div class="power-row">
+      <div id="smile-message" class="smile-message">Hello</div>
       <button id="power-btn" onclick="togglePower()">On/Off</button>
-      <div id="smile-message" class="smile-message">😊 Hello</div>
     </div>
     <div class="display" id="display">0</div>
     <div class="buttons">
