--- a/index.html
+++ b/index.html
@@ -12,25 +12,31 @@
     <div class="display" id="display">0</div>
     <div class="buttons">
       <button class="clear" onclick="clearDisplay()">C</button>
-      <button class="operator root" onclick="appendToDisplay('√')">√</button>
+      <button class="ans" onclick="appendAns()">Ans</button>
       <button onclick="appendToDisplay('(')">(</button>
       <button onclick="appendToDisplay(')')">)</button>
+
       <button onclick="appendToDisplay('7')">7</button>
       <button onclick="appendToDisplay('8')">8</button>
       <button onclick="appendToDisplay('9')">9</button>
       <button class="operator" onclick="appendToDisplay('/')">÷</button>
+
       <button onclick="appendToDisplay('4')">4</button>
       <button onclick="appendToDisplay('5')">5</button>
       <button onclick="appendToDisplay('6')">6</button>
       <button class="operator" onclick="appendToDisplay('*')">×</button>
+
       <button onclick="appendToDisplay('1')">1</button>
       <button onclick="appendToDisplay('2')">2</button>
       <button onclick="appendToDisplay('3')">3</button>
       <button class="operator" onclick="appendToDisplay('-')">−</button>
+
       <button onclick="appendToDisplay('0')">0</button>
       <button onclick="appendToDisplay('.')">.</button>
-      <button class="equal" onclick="calculate()">=</button>
+      <button class="operator root" onclick="appendToDisplay('√')">√</button>
       <button class="operator" onclick="appendToDisplay('+')">+</button>
+
+      <button class="equal" onclick="calculate()">=</button>
     </div>
   </div>
   <script src="calc.js"></script>
