--- a/index.html
+++ b/index.html
@@ -10,37 +10,39 @@
   <div class="calculator">
     <button id="power-btn" onclick="togglePower()">On/Off</button>
     <div class="display" id="display">0</div>
+    <div class="arrow-pad">
+      <button class="arrow-btn up" onclick="moveCursor('up')">&#8593;</button>
+      <button class="arrow-btn left" onclick="moveCursor('left')">&#8592;</button>
+      <button class="arrow-btn right" onclick="moveCursor('right')">&#8594;</button>
+      <button class="arrow-btn down" onclick="moveCursor('down')">&#8595;</button>
+    </div>
     <div class="buttons">
       <button class="clear" onclick="clearDisplay()">C</button>
       <button class="del" onclick="deleteAtCursor()">Del</button>
       <button class="ans" onclick="appendAns()">Ans</button>
-      <button onclick="appendToDisplay('(')">(</button>
-      <button onclick="appendToDisplay(')')">)</button>
+      <button class="operator" onclick="appendToDisplay('/')">÷</button>
 
       <button onclick="appendToDisplay('7')">7</button>
       <button onclick="appendToDisplay('8')">8</button>
       <button onclick="appendToDisplay('9')">9</button>
-      <button class="operator" onclick="appendToDisplay('/')">÷</button>
+      <button class="operator" onclick="appendToDisplay('*')">×</button>
 
       <button onclick="appendToDisplay('4')">4</button>
       <button onclick="appendToDisplay('5')">5</button>
       <button onclick="appendToDisplay('6')">6</button>
-      <button class="operator" onclick="appendToDisplay('*')">×</button>
+      <button class="operator" onclick="appendToDisplay('-')">−</button>
 
       <button onclick="appendToDisplay('1')">1</button>
       <button onclick="appendToDisplay('2')">2</button>
       <button onclick="appendToDisplay('3')">3</button>
-      <button class="operator" onclick="appendToDisplay('-')">−</button>
+      <button class="operator" onclick="appendToDisplay('+')">+</button>
 
       <button onclick="appendToDisplay('0')">0</button>
       <button onclick="appendToDisplay('.')">.</button>
       <button class="operator root" onclick="appendToDisplay('√')">√</button>
-      <button class="operator" onclick="appendToDisplay('+')">+</button>
-
-      <button class="equal" onclick="calculate()">=</button>
-      <button class="arrow-btn" onclick="moveCalculator('left')">&#8592;</button>
-      <button class="arrow-btn" onclick="moveCalculator('right')">&#8594;</button>
+      <div></div>
     </div>
+    <button class="operator equal" onclick="calculate()">=</button>
   </div>
   <script src="calc.js"></script>
 </body>
