--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="power-btn" onclick="togglePower()">On/Off</button>
     <div class="display" id="display">0</div>
     <div class="fraction-percent-row">
-      <button class="side-btn fraction-btn" style="font-family: 'Fira Mono', 'Consolas', 'Menlo', 'Monaco', 'Courier New', monospace;" onclick="insertFraction()">□/□</button>
+      <button class="side-btn fraction-btn" onclick="insertFraction()">□/□</button>
       <div class="arrow-pad">
         <button class="arrow-btn up" onclick="moveCursor('up')">&#8593;</button>
         <button class="arrow-btn left" onclick="moveCursor('left')">&#8592;</button>
