styling and decimal logic

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <button onclick="appendToDisplay('0')">0</button>
       <button onclick="appendToDisplay('.')">.</button>
       <button class="operator root" onclick="appendToDisplay('√')">√</button>
+      <button class="operator root" onclick="appendToDisplay('∛')">∛</button>
       <div></div>
     </div>
     <button class="operator equal" onclick="calculate()">=</button>
